# wg-forward-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh  update.sh  wgfm
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: architecture.md  backup.md  commands.md  faq.md  installation.md  migration.md  troubleshooting.md
examples/: config.yaml
src/wgfm/: __init__.py  backup.py  cli.py  commands.py  config.py  constants.py  errors.py  health.py  installer.py  logger.py  nftables.py  system.py  uninstall.py  updater.py  utils.py  wireguard.py  yamlio.py
systemd/: wgfm-reconcile.service  wgfm-reconcile.timer
